# sora-cpp-sdk-samples

./: .gitignore
pipe_video_src/src/: pipe_video_capturer.cpp  pipe_video_capturer.h  pipe_video_src.cpp  v4l2_video_capturer.cpp  v4l2_video_capturer.h
pipe_video_src/ubuntu-20.04_armv8_jetson/: CMakeLists.txt  run.py
sdl_sample/src/: sdl_sample.cpp
sendonly/src/: sendonly.cpp
sendonly/ubuntu-20.04_armv8_jetson/: CMakeLists.txt  run.py
